# rules_k8s_extension

./: .gitignore  BUILD.bazel  README.md  WORKSPACE  index.bzl  repositories.bzl
docs/: configmap.md  secret.md
example/: BUILD.bazel
example/conf/: foo.conf
internal/: configmap.bzl  helpers.bzl  k8s_extension.bzl
k8s_extension/: BUILD.bazel  repositories.bzl
